--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,6 @@ button:hover {
     background-color: #45a049;
 }
 
-#existing-tags {
-    margin-top: 10px;
-}
-
 .tag {
     display: inline-block;
     background-color: #f0f0f0;
@@ -41,4 +37,16 @@ button:hover {
     margin: 2px;
     border-radius: 3px;
     cursor: pointer;
+}
+
+li {
+    margin: 5px 0;
+}
+
+li input {
+    margin-right: 10px;
+}
+
+li button {
+    margin-left: 10px;
 }
